--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Security Headers -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; frame-src 'self' https://www.canva.com; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; img-src 'self' data: https://www.google-analytics.com;">
+    content="default-src 'self'; frame-src 'self' https://www.canva.com; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; img-src 'self' data: https://www.google-analytics.com;">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
   <meta name="format-detection" content="telephone=no">
@@ -222,11 +222,14 @@
         <!-- Embedded Quiz Starts Here -->
         <div style="position: relative; width: 100%; height: 0; padding-top: 75%;
           box-shadow: 0 4px 12px rgba(0,0,0,0.2); overflow: hidden; border-radius: 10px; will-change: transform;">
-          <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%;
-            top: 0; left: 0; border: none; padding: 0; margin: 0;"
+          <iframe
+            loading="lazy"
+            style="position: absolute; width: 100%; height: 100%; top: 0px;"
             src="https://www.canva.com/design/DAGkhI9smmk/BVneposTN13qyqATwXCrPg/view?embed"
-            allowfullscreen="allowfullscreen" allow="fullscreen">
-          </iframe>
+            allowfullscreen="allowfullscreen"
+            allow="fullscreen"
+            title="Embedded Canva Design: Interactive Quiz"
+          />
         </div>
         <small style="font-size: 1rem;">
           <a href="https://www.canva.com/design/DAGkhI9smmk/BVneposTN13qyqATwXCrPg/view?utm_content=DAGkhI9smmk&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
@@ -503,7 +506,6 @@
         <a href="#legal" aria-label="View Legal Information">Terms, Privacy & Disclaimer</a>
       </p>
       <div id="legal" style="font-size: 0.8rem; margin-top: 20px;">
-        <strong>Terms, Privacy, Disclaimer & Legal:</strong>
         <p>Nothing shared here is medical, legal, or financial advice. All content is for educational purposes only.
           Results may vary. Always trust your discernment. Do your own research. Cryptocurrencies have unique risks
           such
