--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         aria-label="Buy Bitcoin and crypto hardware wallet from Ledger">
         <picture>
           <source srcset="/assets/images/ledger.avif" type="image/avif">
-          <img width="413" height="60" class="quiz-image" src="/assets/images/ledger.png"
+          <img style="width: 100%; height: auto;" class="quiz-image" src="/assets/images/ledger.png"
             alt="Ledger Wallet - Buy Bitcoin and Crypto Hardware Wallet">
         </picture>
       </a>
