--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
 
 
     <!---Your Portal-->
-    <section class="section box" aria-labelledby="portal-header">
+    <section class="section box" aria-labelledby="portal-header-1">
       <header>
-        <h2 id="portal-header" class="green">🧭 Your Portal</h2>
+        <h2 id="portal-header-1" class="green">🧭 Your Portal</h2>
         <p id="portal-desc" class="subtitle">Your Gateway to Crypto, Freedom, & Awakened Wealth</p>
       </header>
       <nav class="portal-nav">
@@ -693,9 +693,9 @@
     </section>
 
     <!---Your Portal-->
-    <section class="section box" aria-labelledby="portal-header">
+    <section class="section box" aria-labelledby="portal-header-2">
       <header>
-        <h2 id="portal-header" class="green">🧭 Your Portal</h2>
+        <h2 id="portal-header-2" class="green">🧭 Your Portal</h2>
         <p id="portal-desc" class="subtitle">Your Gateway to Crypto, Freedom, & Awakened Wealth</p>
       </header>
       <nav class="portal-nav">
