--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
       <div class="img-col">
         <picture>
           <source srcset="/assets/images/BitcoinAwakeningLogo.avif" type="image/avif">
-          <img loading="lazy" width="300" height="300" src="/assets/images/BitcoinAwakeningLogo.png"
-            alt="Bitcoin Freedom Concept" aria-label="Visual of financial freedom through Bitcoin" class="quiz-image">
+          <img width="300" height="300" src="/assets/images/BitcoinAwakeningLogo.png" alt="Bitcoin Freedom Concept"
+            aria-label="Visual of financial freedom through Bitcoin" class="quiz-image">
         </picture>
         <!--Buy From SimpleSwap-->
         <a href="https://simpleswap.io/?ref=53160df239a3" class="cta-button" target="_blank" rel="noopener nofollow"
@@ -303,7 +303,7 @@
       <div class="img-col">
         <picture>
           <source srcset="/assets/images/Quiz.avif" type="image/avif">
-          <img width="128" height="192" style="width: 100%; height: auto;" src="/assets/images/Quiz.png"
+          <img loading="lazy" width="128" height="192" style="width: 100%; height: auto;" src="/assets/images/Quiz.png"
             alt="Bitcoin Freedom Concept" aria-label="Visual To Take Part in Crypto, Bitcoin Quiz" class="quiz-image">
         </picture>
       </div>
