--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
   <meta name="author" content="Candice Cizut">
 
   <!-- Security Headers -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self';
-  frame-src 'self';
-  style-src 'self' 'unsafe-inline';
-  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com;
-  img-src 'self' https://www.google-analytics.com data:;
-  connect-src 'self' https://www.google-analytics.com;
-  font-src 'self';
-  object-src 'none';
-  base-uri 'self';
-  form-action 'self';
-  upgrade-insecure-requests;
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    frame-src 'self';
+    style-src 'self' 'unsafe-inline';
+    script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://mc.yandex.ru;
+    img-src 'self' https://www.google-analytics.com https://mc.yandex.ru data:;
+    connect-src 'self' https://www.google-analytics.com https://mc.yandex.ru;
+    font-src 'self';
+    object-src 'none';
+    base-uri 'self';
+    form-action 'self';
+    upgrade-insecure-requests;
   ">
+
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
   <meta name="format-detection" content="telephone=no">
